[package]
name = "vuefinder"
version = "0.1.0"
authors = ["boenfu"]
description = "A Rust implementation of VueFinder file manager"
edition = "2021"
license = "MIT"
repository = "https://github.com/boenfu/vuefinder"
keywords = ["file-manager", "web", "vue", "vuefinder"]
categories = ["filesystem", "web-programming"]
readme = "README.md"

[lib]
name = "vuefinder"
path = "src/lib.rs"

[[bin]]
name = "vuefinder"
path = "src/main.rs"
required-features = ["binary"]

[features]
default = ["binary"]
binary = []

[dependencies]
# HTTP & Web
actix-web = { version = "4.0", features = ["macros"] }
actix-multipart = "0.4"
actix-cors = "0.6"
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
async-stream = "0.3"
async-trait = "0.1"

# File Operations
zip = "0.6"
mime_guess = "2.0"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
